world_loader base class added put file base world_loader in another code base.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ set(SOURCE_FILES
     src/cube.cpp
     src/world_loader.cpp
     src/texture_mapper.cpp
+    src/file_world_loader.cpp
     )
 
 add_executable(gl_play  ${SOURCE_FILES})
