--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ set(SOURCE_FILES
     src/world_loader.cpp
     src/texture_mapper.cpp
     src/file_world_loader.cpp
+    src/perlin_world_loader.cpp
     )
 
 add_executable(gl_play  ${SOURCE_FILES})
